--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-whatsapp": "^0.3.0",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
